# figment-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
agents/: base.py  ld_wisdom_config.py  prioritizer.py  tier1_looker.py  tier2_enterpret.py  tier3_external.py  tier3_stub.py  tier3_web.py  tier3_zoominfo.py  wisdom_cypher_defaults.py  wisdom_mcp.py  wisdom_prompts.py
bootstrap/: __init__.py  create_configs.py  create_wisdom_string_flags.py  generate_prioritizer_eval_dataset.py  wisdom_get_schema.py  wisdom_prompt_flag_defaults.py
config/: e100_output_columns.yaml  settings.yaml  tier3_sources.yaml  wisdom_cypher.yaml
core/: deduplicator.py  merger.py  schema.py  scorer.py
data/: overrides.csv
docs/: architecture.md  index.html  prioritizer-offline-eval.md
docs/examples/: prioritizer_eval.sample.jsonl  prioritizer_eval_scenario_small.json  prioritizer_eval_scenario_tier1_only.json
outputs/: e100_manifest.py  sheets_run_diff.py  sheets_writer.py  slack_notifier.py
scripts/: dump_looker_csv_headers.py  ld_prioritizer_smoke.py
tests/: test_e100_summary_selection.py  test_linear_pipeline.py  test_prioritizer_contract.py  test_prioritizer_mode.py  test_sheet_export_ranking.py  test_sheets_credentials_path.py  test_sheets_run_diff.py  test_tier2_cypher_embedded.py  test_tier2_log_verbosity.py  test_tier3_web.py  test_wide_e100_output.py  test_wisdom_mcp.py
